<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <include
        android:id="@+id/signIn_toolbar"
        layout="@layout/app_toolbar" />


    <TextView
        android:id="@+id/signIn_textview"
        android:layout_below="@id/signIn_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_to_your_account"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_textview"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signIn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/signIn_signIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/signIn_password"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_border"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_in"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="italic"
        android:translationZ="5dp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/signIn_signIn"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_border"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:text="@string/forget_password"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="italic"
        android:translationZ="5dp" />


</RelativeLayout>