<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/defaul_av_imag" />

    <TextView
        android:id="@+id/profile_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/user_name"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:text="@string/profile_status"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:textColor="#fff"
        android:text="@string/score"
        android:textSize="40sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/profile_scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_toEndOf="@+id/profile_score"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/profile_changeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="#fff"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/change_status"
        android:elevation="4dp"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>